cambio en la foto

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </section>
         <section>
-            <img class="imagenPersonal" src="/img/PPUno.JPEG" alt="">
+            <img class="imagenPersonal" src="/img/PPUno.png" alt="">
         </section>
     </section>
     <section>
