cambios en las fotos ahora si

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
             </div>
         </section>
         <section>
-            <img class="imagenPersonal" src="/img/imagenes/ppuno.jpg" alt="FotoPortafolio">
+            <img class="imagenPersonal" src="img/imagenes/ppuno.jpg" alt="FotoPortafolio">
         </section>
     </section>
     <section>
-        <img class="lineaAmarilla" src="/img/imagenes/lineamarilla.svg" alt="LineaAmarilla">
+        <img class="lineaAmarilla" src="img/imagenes/lineamarilla.svg" alt="LineaAmarilla">
     </section>
     <section class="formacion">
 
