cambios en movil

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <section class="logo">
-            <div class="nombreHeader">CL</div>
+            <!-- <div class="nombreHeader">CL</div> -->
         </section>
         <section class="contenedorMenu">
             <div class="contenedorMenuHijo">Inicio</div>
@@ -49,7 +49,7 @@
 
             </div>
         </section>
-        <section>
+        <section class="contenedorImagenPersonal">
             <img class="imagenPersonal" src="img/imagenes/ppuno.jpg" alt="FotoPortafolio">
         </section>
     </section>
@@ -127,6 +127,54 @@
                 <button onclick="nextSlide()">❯</button>
             </div>
         </div> -->
+    </section>
+
+    <section class="contenedor-carruseles">
+        <!-- Carrusel 1 -->
+        <section class="carrusel-logros">
+            <h2>Mis Logros</h2>
+            <div class="carrusel-container">
+                <div class="carrusel-slide active">
+                    <img src="img/Logros/1.jpeg" alt="Ganador Hackatón">
+                    <p>1er Lugar - Hackatón Emprendeichon 2021.</p>
+                </div>
+                <div class="carrusel-slide">
+                    <img src="img/Logros/3.jpeg" alt="Otro logro">
+                    <p>Entrega oficial de premio por parte del jurado del Hackatón.</p>
+                </div>
+            </div>
+            <div class="carrusel-buttons">
+                <button class="prev">&#10094;</button>
+                <button class="next">&#10095;</button>
+            </div>
+        </section>
+
+        <!-- Carrusel 2 -->
+        <section class="carrusel-logros">
+            <h2>Certificados</h2>
+            <div class="carrusel-container">
+                <div class="carrusel-slide active">
+                    <img src="img/Certificaciones/download-1.png" alt="Certificado 1">
+                    <p>Certificado Frontend 2024</p>
+                </div>
+                <div class="carrusel-slide">
+                    <img src="img/Certificaciones/download-2.png" alt="Certificado 1">
+                    <p>Certificado Backend 2024</p>
+                </div>
+                <div class="carrusel-slide">
+                    <img src="img/Certificaciones/download-3.png" alt="Certificado 1">
+                    <p>Certificado Backend 2024</p>
+                </div>
+                <div class="carrusel-slide">
+                    <img src="img/Certificaciones/download-4.png" alt="Certificado 1">
+                    <p>Certificado Backend 2024</p>
+                </div>
+            </div>
+            <div class="carrusel-buttons">
+                <button class="prev">&#10094;</button>
+                <button class="next">&#10095;</button>
+            </div>
+        </section>
     </section>
 
     <!-- <footer>
