--- a/index.html
+++ b/index.html
@@ -1,186 +1,326 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/portafolio.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
 
     <title>Portafolio | Desarrollador Web</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <section class="logo">
-            <!-- <div class="nombreHeader">CL</div> -->
-        </section>
-        <section class="contenedorMenu">
-            <div class="contenedorMenuHijo">Inicio</div>
-            <div class="contenedorMenuHijo">¿Quién soy?</div>
-            <div class="contenedorMenuHijo">Portafolio</div>
-            <div class="contenedorMenuHijoContactame">Contáctame</div>
-            <div class="separadorMenuHeader"></div>
-            <div class="contenedorMenuHijo" id="cambiarIdioma">Inglés</div>
-        </section>
+      <section class="logo">
+        <!-- <div class="nombreHeader">CL</div> -->
+      </section>
+      <section class="contenedorMenu">
+        <div class="contenedorMenuHijo">Inicio</div>
+        <div class="contenedorMenuHijo">¿Quién soy?</div>
+        <div class="contenedorMenuHijo">Portafolio</div>
+        <div class="contenedorMenuHijoContactame">Contáctame</div>
+        <div class="separadorMenuHeader"></div>
+        <div class="contenedorMenuHijo" id="cambiarIdioma">Inglés</div>
+      </section>
     </header>
 
     <section class="contenedorInformacionYFoto">
-        <section class="contenedorInformacion">
-            <h1 class="infoNombre">Soy Carlos Loaiza</h1>
-            <p class="parrafoInformacion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi laborum
-                consequuntur officiis
-                voluptates amet tempore nihil eius ullam quod deleniti quia atque quisquam totam, maiores minima rerum
-                dolorem, quas recusandae.</p>
-            <div class="contenedorBotonesRedes">
-
-                <a href="https://www.instagram.com/tu_usuario" target="_blank" class="botonRedes" id="instagram">
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
-                <a href="https://www.instagram.com/tu_usuario" target="_blank" class="botonRedes" id="facebook">
-                    <i class="fa-brands fa-facebook-f"></i>
-                </a>
-                <a href="https://www.instagram.com/tu_usuario" target="_blank" class="botonRedes" id="linkedin">
-                    <i class="fa-brands fa-linkedin-in"></i>
-                </a>
-                <a href="documentos/mi_archivo.pdf" download class="botonRedes" id="cv">
-                    <i class="fa-solid fa-file"></i>
-                </a>
-
-            </div>
-        </section>
-        <section class="contenedorImagenPersonal">
-            <img class="imagenPersonal" src="img/imagenes/ppuno.jpg" alt="FotoPortafolio">
-        </section>
+      <section class="contenedorInformacion">
+        <h1 class="infoNombre">Soy Carlos Loaiza</h1>
+        <p class="parrafoInformacion">
+          Soy un joven con pasión por su profesión, excelente capacidad de
+          organización y facilidad para el trabajo en equipo. Persona muy
+          adaptable a todo tipo de entornos y clara orientación a objetivos.
+        </p>
+        <div class="contenedorBotonesRedes">
+          <a
+            href="https://www.instagram.com/tu_usuario"
+            target="_blank"
+            class="botonRedes"
+            id="instagram"
+          >
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a
+            href="https://www.instagram.com/tu_usuario"
+            target="_blank"
+            class="botonRedes"
+            id="facebook"
+          >
+            <i class="fa-brands fa-facebook-f"></i>
+          </a>
+          <a
+            href="https://www.instagram.com/tu_usuario"
+            target="_blank"
+            class="botonRedes"
+            id="linkedin"
+          >
+            <i class="fa-brands fa-linkedin-in"></i>
+          </a>
+          <a
+            href="documentos/mi_archivo.pdf"
+            download
+            class="botonRedes"
+            id="cv"
+          >
+            <i class="fa-solid fa-file"></i>
+          </a>
+        </div>
+      </section>
+      <section class="contenedorImagenPersonal">
+        <img
+          class="imagenPersonal"
+          src="img/imagenes/ppuno.jpg"
+          alt="FotoPortafolio"
+        />
+      </section>
     </section>
     <section>
-        <img class="lineaAmarilla" src="img/imagenes/lineamarilla.svg" alt="LineaAmarilla">
+      <img
+        class="lineaAmarilla"
+        src="img/imagenes/lineamarilla.svg"
+        alt="LineaAmarilla"
+      />
     </section>
     <section class="formacion">
-
-        <div class="escuelas">
-            <h2>Mi Alma Máter</h2>
-            <div class="logo-escuela">
-                <img src="img/62521.png" alt="TecNM Culiacán">
-                <h3>Instituto Tecnológico Nacional de México - Campus Culiacán</h3>
-                <p>Ingeniería en Sistemas Computacionales</p>
-                <p>2018 - 2023</p>
-            </div>
+      <div class="escuelas">
+        <h2>Mi Alma Máter</h2>
+        <div class="logo-escuela">
+          <img src="img/62521.png" alt="TecNM Culiacán" />
+          <h3>Instituto Tecnológico Nacional de México - Campus Culiacán</h3>
+          <p>Ingeniería en Sistemas Computacionales</p>
+          <p>2018 - 2023</p>
         </div>
+      </div>
 
-        <div class="escuelas">
-
-            <h2>Formación Académica</h2>
-            <div class="logo-escuela">
-                <img src="img/logocetis.png" alt="Preparatoria CETis 123">
-                <h3>Centro de Estudios Tecnológicos industrial y de servicios No. 107</h3>
-                <p>Preparatoria Técnica - Especialidad Electrónica</p>
-                <p>2015 - 2018</p>
-            </div>
+      <div class="escuelas">
+        <h2>Formación Académica</h2>
+        <div class="logo-escuela">
+          <img src="img/logocetis.png" alt="Preparatoria CETis 123" />
+          <h3>
+            Centro de Estudios Tecnológicos industrial y de servicios No. 107
+          </h3>
+          <p>Preparatoria Técnica - Especialidad Electrónica</p>
+          <p>2015 - 2018</p>
         </div>
+      </div>
     </section>
 
+    <section class="seccion-experiencia-especialidades">
+      <div class="experiencia-col">
+        <h2>Experiencia Profesional</h2>
+
+        <div class="experiencia">
+          <h3>Desarrollador Web Fullstack</h3>
+          <h4>ISSSTEESIN — 2023 - Actualidad</h4>
+          <p>
+            Desarrollo de sistemas en Node.js y Vue. Migración de datos,
+            autenticación de usuarios y manejo de dashboards.
+          </p>
+        </div>
+
+        <div class="experiencia">
+          <h3>Frontend Developer</h3>
+          <h4>Spanna Studio — 2021 - 2023</h4>
+          <p>
+            Diseño e implementación de interfaces web modernas con HTML, CSS, JS
+            y Vue. Enfoque en experiencia de usuario.
+          </p>
+        </div>
+
+        <div class="experiencia">
+          <h3>Practicante de TI</h3>
+          <h4>Avicor SA de CV — 2020</h4>
+          <p>
+            Soporte técnico, documentación de procesos y pruebas de software.
+            Introducción a redes y servidores.
+          </p>
+        </div>
+      </div>
+
+      <div class="especialidades-col">
+        <h2>Especialidades</h2>
+        <div class="especialidades-grid">
+          <div class="especialidad-card">
+            <i class="fa-solid fa-code"></i>
+            <h4>Desarrollo Web</h4>
+            <p>
+              Experiencia con HTML, CSS, JavaScript, Vue, y desarrollo
+              responsive.
+            </p>
+          </div>
+          <div class="especialidad-card">
+            <i class="fa-solid fa-database"></i>
+            <h4>Backend y Bases de Datos</h4>
+            <p>Node.js, Express y gestión de datos en MySQL y MongoDB.</p>
+          </div>
+          <div class="especialidad-card">
+            <i class="fa-solid fa-sitemap"></i>
+            <h4>Arquitectura de Sistemas</h4>
+            <p>Organización de proyectos modulares y escalables.</p>
+          </div>
+          <div class="especialidad-card">
+            <i class="fa-solid fa-users-gear"></i>
+            <h4>Trabajo en Equipo</h4>
+            <p>
+              Experiencia colaborativa con Git, SCRUM y metodologías ágiles.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <section class="contenedorEmpresas">
-        <h2 class="tituloEmpresas">Empresas que confiaron en mi talento</h2>
-        <section class="clientes">
-
-            <div class="logos-clientes">
-                <img id="Auplex" src="img/Clientes/AUPLEX.svg" alt="">
-                <img id="Avicor" src="img/Clientes/AVICOR.png" alt="">
-                <img id="Bahk" src="img/Clientes/BAHK.svg" alt="">
-                <img id="MarNegro" src="img/Clientes/MARNEGRO.svg" alt="">
-                <img id="Compania" src="img/Clientes/LACOMPANIA.png" alt="">
-                <img id="ConLocal" src="img/Clientes/CONSUMIMOSLOCAL.svg" alt="">
-                <img id="Serhsi" src="img/Clientes/SERHSI.png" alt="">
-                <img id="Spanna" src="img/Clientes/SPANNA.svg" alt="">
-                <img id="YamYam" src="img/Clientes/YAMYAM.svg" alt="">
-            </div>
-
-
-
-
-        </section>
+      <h2 class="tituloEmpresas">Empresas que confiaron en mi talento</h2>
+      <section class="clientes">
+        <div class="logos-clientes">
+          <img id="Auplex" src="img/Clientes/AUPLEX.svg" alt="" />
+          <img id="Avicor" src="img/Clientes/AVICOR.png" alt="" />
+          <img id="Bahk" src="img/Clientes/BAHK.svg" alt="" />
+          <img id="MarNegro" src="img/Clientes/MARNEGRO.svg" alt="" />
+          <img id="Compania" src="img/Clientes/LACOMPANIA.png" alt="" />
+          <img id="ConLocal" src="img/Clientes/CONSUMIMOSLOCAL.svg" alt="" />
+          <img id="Serhsi" src="img/Clientes/SERHSI.png" alt="" />
+          <img id="Spanna" src="img/Clientes/SPANNA.svg" alt="" />
+          <img id="YamYam" src="img/Clientes/YAMYAM.svg" alt="" />
+        </div>
+      </section>
     </section>
 
-    <section>
-        <h2 class="section-title">Mis Proyectos</h2>
-
-        <!-- <div class="carousel-container">
-            <div class="carousel-slides" id="slides">
-                <div class="slide">
-                    <img src="https://via.placeholder.com/800x400?text=Proyecto+1" alt="Proyecto 1">
-                    <div class="carousel-caption">Landing page para startup de tecnología.</div>
-                </div>
-                <div class="slide">
-                    <img src="https://via.placeholder.com/800x400?text=Proyecto+2" alt="Proyecto 2">
-                    <div class="carousel-caption">Panel administrativo con diseño responsivo.</div>
-                </div>
-                <div class="slide">
-                    <img src="https://via.placeholder.com/800x400?text=Proyecto+3" alt="Proyecto 3">
-                    <div class="carousel-caption">E-commerce minimalista para tienda de ropa.</div>
-                </div>
-            </div>
-
-            <div class="carousel-buttons">
-                <button onclick="prevSlide()">❮</button>
-                <button onclick="nextSlide()">❯</button>
-            </div>
-        </div> -->
+    <section class="seccion-sistemas">
+      <h2>Proyectos Reales</h2>
+      <p class="intro-sistemas">
+        Algunos de los sistemas en los que he trabajado profesionalmente.
+      </p>
+      <div class="galeria-sistemas">
+        <div class="sistema-item">
+          <img src="img/Logros/1.jpeg" alt="Sistema 1" />
+          <p>Panel de gestión ISSSTEESIN</p>
+        </div>
+        <div class="sistema-item">
+          <img src="img/Logros/1.jpeg" alt="Sistema 2" />
+          <p>Dashboard de clientes Spanna</p>
+        </div>
+        <div class="sistema-item">
+            <img src="img/Logros/1.jpeg" alt="Sistema 2" />
+            <p>Dashboard de clientes Spanna</p>
+          </div>
+        <!-- Puedes seguir agregando -->
+      </div>
     </section>
 
     <section class="contenedor-carruseles">
-        <!-- Carrusel 1 -->
-        <section class="carrusel-logros">
-            <h2>Mis Logros</h2>
-            <div class="carrusel-container">
-                <div class="carrusel-slide active">
-                    <img src="img/Logros/1.jpeg" alt="Ganador Hackatón">
-                    <p>1er Lugar - Hackatón Emprendeichon 2021.</p>
-                </div>
-                <div class="carrusel-slide">
-                    <img src="img/Logros/3.jpeg" alt="Otro logro">
-                    <p>Entrega oficial de premio por parte del jurado del Hackatón.</p>
-                </div>
-            </div>
-            <div class="carrusel-buttons">
-                <button class="prev">&#10094;</button>
-                <button class="next">&#10095;</button>
-            </div>
-        </section>
+      <!-- Carrusel 1 -->
+      <section class="carrusel-logros">
+        <h2>Mis Logros</h2>
+        <div class="carrusel-container">
+          <div class="carrusel-slide active">
+            <img src="img/Logros/1.jpeg" alt="Ganador Hackatón" />
+            <p>1er Lugar - Hackatón Emprendeichon 2021.</p>
+          </div>
+          <div class="carrusel-slide">
+            <img src="img/Logros/3.jpeg" alt="Otro logro" />
+            <p>Entrega oficial de premio por parte del jurado del Hackatón.</p>
+          </div>
+        </div>
+        <div class="carrusel-buttons">
+          <button class="prev">&#10094;</button>
+          <button class="next">&#10095;</button>
+        </div>
+      </section>
 
-        <!-- Carrusel 2 -->
-        <section class="carrusel-logros">
-            <h2>Certificados</h2>
-            <div class="carrusel-container">
-                <div class="carrusel-slide active">
-                    <img src="img/Certificaciones/download-1.png" alt="Certificado 1">
-                    <p>Certificado Frontend 2024</p>
-                </div>
-                <div class="carrusel-slide">
-                    <img src="img/Certificaciones/download-2.png" alt="Certificado 1">
-                    <p>Certificado Backend 2024</p>
-                </div>
-                <div class="carrusel-slide">
-                    <img src="img/Certificaciones/download-3.png" alt="Certificado 1">
-                    <p>Certificado Backend 2024</p>
-                </div>
-                <div class="carrusel-slide">
-                    <img src="img/Certificaciones/download-4.png" alt="Certificado 1">
-                    <p>Certificado Backend 2024</p>
-                </div>
-            </div>
-            <div class="carrusel-buttons">
-                <button class="prev">&#10094;</button>
-                <button class="next">&#10095;</button>
-            </div>
-        </section>
+      <!-- Carrusel 2 -->
+      <section class="carrusel-logros">
+        <h2>Certificados</h2>
+        <div class="carrusel-container">
+          <div class="carrusel-slide active">
+            <img src="img/Certificaciones/download-1.png" alt="Certificado 1" />
+            <p>Certificado Frontend 2024</p>
+          </div>
+          <div class="carrusel-slide">
+            <img src="img/Certificaciones/download-2.png" alt="Certificado 1" />
+            <p>Certificado Backend 2024</p>
+          </div>
+          <div class="carrusel-slide">
+            <img src="img/Certificaciones/download-3.png" alt="Certificado 1" />
+            <p>Certificado Backend 2024</p>
+          </div>
+          <div class="carrusel-slide">
+            <img src="img/Certificaciones/download-4.png" alt="Certificado 1" />
+            <p>Certificado Backend 2024</p>
+          </div>
+        </div>
+        <div class="carrusel-buttons">
+          <button class="prev">&#10094;</button>
+          <button class="next">&#10095;</button>
+        </div>
+      </section>
     </section>
 
-    <!-- <footer>
-        <p>Contacto: juanperez@email.com | GitHub: @juanperezdev</p>
-    </footer> -->
-    <script src="js/portafolio.js"></script>
-</body>
+    <section class="seccion-contacto" id="contacto">
+      <h2>Contáctame</h2>
+      <form class="formulario-contacto" action="#" method="post">
+        <label for="nombre">Nombre</label>
+        <input
+          type="text"
+          id="nombre"
+          name="nombre"
+          required
+          placeholder="Tu nombre"
+        />
 
+        <label for="correo">Correo Electrónico</label>
+        <input
+          type="email"
+          id="correo"
+          name="correo"
+          required
+          placeholder="tucorreo@ejemplo.com"
+        />
+
+        <label for="mensaje">Mensaje</label>
+        <textarea
+          id="mensaje"
+          name="mensaje"
+          rows="5"
+          required
+          placeholder="Escribe tu mensaje..."
+        ></textarea>
+
+        <button type="submit">Enviar</button>
+      </form>
+    </section>
+
+    <footer class="footer">
+      <div class="footer-contenido">
+        <div class="footer-nombre">
+          <h3>Carlos Loaiza</h3>
+          <p>Desarrollador Web | Frontend & Backend</p>
+        </div>
+
+        <div class="footer-redes">
+          <a href="https://www.instagram.com/tu_usuario" target="_blank">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/tu_usuario" target="_blank">
+            <i class="fa-brands fa-linkedin-in"></i>
+          </a>
+          <a href="https://github.com/tu_usuario" target="_blank">
+            <i class="fa-brands fa-github"></i>
+          </a>
+          <a href="mailto:tucorreo@ejemplo.com">
+            <i class="fa-solid fa-envelope"></i>
+          </a>
+        </div>
+      </div>
+
+      <div class="footer-copy">
+        <p>&copy; 2025 Carlos Loaiza. Todos los derechos reservados.</p>
+      </div>
+    </footer>
+    <script src="js/portafolio.js"></script>
+  </body>
 </html>
