--- a/index.html
+++ b/index.html
@@ -105,43 +105,57 @@
         <div class="especialidades-col">
             <h2>Especialidades</h2>
             <div class="especialidades-grid">
-                <div class="especialidad-card">
-                    <i class="fa-solid fa-code"></i>
-                    <h4>Desarrollo Web</h4>
-                    <p>
-                        Diseño y construcción de interfaces responsivas usando
-                        <strong>HTML</strong>, <strong>CSS</strong>,
-                        <strong>JavaScript</strong> y <strong>Vue.js</strong>.
-                    </p>
-                </div>
-                <div class="especialidad-card">
-                    <i class="fa-solid fa-database"></i>
-                    <h4>Backend y Bases de Datos</h4>
-                    <p>
-                        Desarrollo de APIs con <strong>Node.js</strong> y
-                        <strong>Express</strong>. Manejo de bases de datos relacionales
-                        (<strong>MySQL</strong>) y no relacionales
-                        (<strong>MongoDB</strong>).
-                    </p>
-                </div>
-                <div class="especialidad-card">
-                    <i class="fa-solid fa-sitemap"></i>
-                    <h4>Arquitectura de Sistemas</h4>
-                    <p>
-                        Organización de proyectos escalables con estructuras modulares,
-                        aplicando principios de clean code y buenas prácticas de
-                        desarrollo.
-                    </p>
-                </div>
-                <div class="especialidad-card">
-                    <i class="fa-solid fa-users-gear"></i>
-                    <h4>Trabajo en Equipo</h4>
-                    <p>
-                        Colaboración efectiva en equipos multidisciplinarios. Uso de
-                        <strong>Git</strong>, metodologías <strong>Ágiles</strong> y
-                        enfoque en entregas iterativas (SCRUM).
-                    </p>
-                </div>
+                <section class="contenedorTarjetas">
+                    <div class="especialidad-card">
+                        <div>
+                            <img src="/icono1.svg" alt="">
+                        </div>
+                        <h4>Desarrollo Web</h4>
+                        <p>
+                            Diseño y construcción de interfaces responsivas usando
+                            <strong>HTML</strong>, <strong>CSS</strong>,
+                            <strong>JavaScript</strong> y <strong>Vue.js</strong>.
+                        </p>
+                    </div>
+                    <div class="especialidad-card">
+                        <div>
+                            <img src="/icono3.svg" alt="">
+                        </div>
+                        <h4>Backend y Bases de Datos</h4>
+                        <p>
+                            Desarrollo de APIs con <strong>Node.js</strong> y
+                            <strong>Express</strong>. Manejo de bases de datos relacionales
+                            (<strong>MySQL</strong>) y no relacionales
+                            (<strong>MongoDB</strong>).
+                        </p>
+                    </div>
+                </section>
+
+                <section class="contenedorTarjetas">
+                    <div class="especialidad-card">
+                        <div>
+                            <img src="/icono2.svg" alt="">
+                        </div>
+                        <h4>Arquitectura de Sistemas</h4>
+                        <p>
+                            Organización de proyectos escalables con estructuras modulares,
+                            aplicando principios de clean code y buenas prácticas de
+                            desarrollo.
+                        </p>
+                    </div>
+                    <div class="especialidad-card">
+                        <div>
+                            <img src="/icono4.svg" alt="">
+                        </div>
+                        <h4>Trabajo en Equipo</h4>
+                        <p>
+                            Colaboración efectiva en equipos multidisciplinarios. Uso de
+                            <strong>Git</strong>, metodologías <strong>Ágiles</strong> y
+                            enfoque en entregas iterativas (SCRUM).
+                        </p>
+                    </div>
+                </section>
+
             </div>
         </div>
         <section class="formacion">
