--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <section class="contenedorTarjetas">
                     <div class="especialidad-card">
                         <div>
-                            <img src="/icono1.svg" alt="">
+                            <img src="img/icono1.svg" alt="">
                         </div>
                         <h4>Desarrollo Web</h4>
                         <p>
@@ -119,7 +119,7 @@
                     </div>
                     <div class="especialidad-card">
                         <div>
-                            <img src="/icono3.svg" alt="">
+                            <img src="img/icono3.svg" alt="">
                         </div>
                         <h4>Backend y Bases de Datos</h4>
                         <p>
@@ -134,7 +134,7 @@
                 <section class="contenedorTarjetas">
                     <div class="especialidad-card">
                         <div>
-                            <img src="/icono2.svg" alt="">
+                            <img src="img/icono2.svg" alt="">
                         </div>
                         <h4>Arquitectura de Sistemas</h4>
                         <p>
@@ -145,7 +145,7 @@
                     </div>
                     <div class="especialidad-card">
                         <div>
-                            <img src="/icono4.svg" alt="">
+                            <img src="img/icono4.svg" alt="">
                         </div>
                         <h4>Trabajo en Equipo</h4>
                         <p>
@@ -205,7 +205,7 @@
                 <div class="carrusel-container">
                     <div class="carrusel-slidee active">
                         <img src="img/Landings/LPAuplex.svg" alt="Ganador Hackatón" />
-                        <p>YamYam</p>
+                        <p>AUPLEX</p>
                     </div>
                     <div class="carrusel-slidee">
                         <img src="img/Landings/LPCompania.svg" alt="Otro logro" />
@@ -213,15 +213,15 @@
                     </div>
                     <div class="carrusel-slidee">
                         <img src="img/Landings/LPSerhsi.svg" alt="Otro logro" />
-                        <p>SPANNA</p>
+                        <p>SERHSI</p>
                     </div>
                     <div class="carrusel-slidee">
                         <img src="img/Landings/LPSpanna.svg" alt="Otro logro" />
-                        <p>AUPLEX</p>
+                        <p>SPANNA</p>
                     </div>
                     <div class="carrusel-slidee">
                         <img src="img/Landings/LPYamYam.svg" alt="Otro logro" />
-                        <p>SERHSI</p>
+                        <p>YamYam</p>
                     </div>
                 </div>
                 <div class="carrusel-buttons">
