cambios en movil y web

--- a/index.html
+++ b/index.html
@@ -9,13 +9,40 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
 
-    <title>Portafolio | Desarrollador Web</title>
+    <title>Portafolio | Carlos Loaiza</title>
   </head>
 
   <body>
     <header>
       <section class="logo">
-        <!-- <div class="nombreHeader">CL</div> -->
+        <!-- <div class="nombreHeader">CL</div>
+        <div class="separadorMenuHeader"></div>
+        <div class="contenedorBotonesRedes">
+          <a
+            href="https://www.instagram.com/carlos.loaiza_/"
+            target="_blank"
+            class="botonRedes"
+            id="instagram"
+          >
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a
+            href="https://www.linkedin.com/in/carlos-andr%C3%A9s-loaiza-b29176211/"
+            target="_blank"
+            class="botonRedes"
+            id="linkedin"
+          >
+            <i class="fa-brands fa-linkedin-in"></i>
+          </a>
+          <a
+            href="Documents/CV-CarlosAndresLoaiza.pdf"
+            download
+            class="botonRedes"
+            id="cv"
+          >
+            <i class="fa-solid fa-file"></i>
+          </a>
+        </div> -->
       </section>
       <section class="contenedorMenu">
         <a class="contenedorMenuHijo" href="#inicio">Inicio</a>
@@ -37,12 +64,14 @@
           Hola, Soy Carlos Andrés Loaiza
         </h1>
         <p class="parrafoInformacion">
-          Soy un desarrollador web orientado a resultados que crea y administra
-          sitios web y aplicaciones que conducen al éxito del producto general.
+          <span class="spanAmarillo">Desarrollador Full Stack</span> orientado a
+          resultados, enfocado en diseñar, crear y mantener sistemas web
+          eficaces que impulsan el <span class="spanAmarillo">éxito</span> del
+          producto y del negocio.
         </p>
         <div class="contenedorBotonesRedes">
           <a
-            href="https://www.instagram.com/tu_usuario"
+            href="https://www.instagram.com/carlos.loaiza_/"
             target="_blank"
             class="botonRedes"
             id="instagram"
@@ -50,15 +79,7 @@
             <i class="fa-brands fa-instagram"></i>
           </a>
           <a
-            href="https://www.instagram.com/tu_usuario"
-            target="_blank"
-            class="botonRedes"
-            id="facebook"
-          >
-            <i class="fa-brands fa-facebook-f"></i>
-          </a>
-          <a
-            href="https://www.instagram.com/tu_usuario"
+            href="https://www.linkedin.com/in/carlos-andr%C3%A9s-loaiza-b29176211/"
             target="_blank"
             class="botonRedes"
             id="linkedin"
@@ -66,7 +87,21 @@
             <i class="fa-brands fa-linkedin-in"></i>
           </a>
           <a
-            href="documentos/mi_archivo.pdf"
+            href="https://wa.me/6672476316?text=Hola%2C%20quiero%20más%20información"
+            target="_blank"
+            class="botonRedes"
+          >
+            <i class="fa-brands fa-whatsapp"></i>
+          </a>
+          <a
+            href="mailto:carlos.andres.loaiza52@gmail.com"
+            target="_blank"
+            class="botonRedes"
+          >
+            <i class="fa-solid fa-envelope"></i>
+          </a>
+          <a
+            href="Documents/CV-CarlosAndresLoaiza.pdf"
             download
             class="botonRedes"
             id="cv"
@@ -209,16 +244,16 @@
       </section>
     </section>
 
-    <section class="Proyectos">
+    <section class="Proyectos" id="portafolio">
       <h2 class="TituloProyectos">PROYECTOS</h2>
       <div class="SeparadorAcercaDe"></div>
       <p class="intro-sistemas">
-        Aquí encontrará algunos de los proyectos personales y de clientes que he
-        creado, y cada proyecto contiene su propio estudio de caso.
+        Aquí encontrarás algunos de los proyectos personales y de clientes que
+        he creado, cada proyecto contiene su propio estudio de caso.
       </p>
     </section>
 
-    <section class="seccion-sistemas" id="portafolio">
+    <section class="seccion-sistemas">
       <div class="galeria-sistemas">
         <section class="carrusel-clientes">
           <div class="carrusel-container">
@@ -374,16 +409,22 @@
         </div>
 
         <div class="footer-redes">
-          <a href="https://www.instagram.com/tu_usuario" target="_blank">
+          <a href="https://www.instagram.com/carlos.loaiza_/" target="_blank">
             <i class="fa-brands fa-instagram"></i>
           </a>
-          <a href="https://www.linkedin.com/in/tu_usuario" target="_blank">
+          <a
+            href="https://www.linkedin.com/in/carlos-andr%C3%A9s-loaiza-b29176211/"
+            target="_blank"
+          >
             <i class="fa-brands fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/tu_usuario" target="_blank">
-            <i class="fa-brands fa-github"></i>
+          <a
+            href="https://wa.me/6672476316?text=Hola%2C%20quiero%20más%20información"
+            target="_blank"
+          >
+            <i class="fa-brands fa-whatsapp"></i>
           </a>
-          <a href="mailto:tucorreo@ejemplo.com">
+          <a href="mailto:carlos.andres.loaiza52@gmail.com">
             <i class="fa-solid fa-envelope"></i>
           </a>
         </div>
