cambios en menu hamburguesa

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         <div class="separadorMenuHeader"></div>
         <div class="contenedorMenuHijo" id="cambiarIdioma">English</div>
       </section>
+      <div id="burguer-movil" class="menu-movil-click">
+        <div class="barra"></div>
+        <div class="barra"></div>
+        <div class="barra"></div>
+      </div>
     </header>
 
     <section class="contenedorInformacionYFoto">
