--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <body>
     <header>
       <section class="logo">
-        <!-- <div class="nombreHeader">CL</div>
-        <div class="separadorMenuHeader"></div>
-        <div class="contenedorBotonesRedes">
+        <div class="nombreHeader" id="nombreHeader">CL</div>
+        <div class="separadorMenuHeader" id="separadorScroll"></div>
+        <div class="contenedorBotonesRedes" id="redesHeader">
           <a
             href="https://www.instagram.com/carlos.loaiza_/"
             target="_blank"
@@ -35,6 +35,20 @@
             <i class="fa-brands fa-linkedin-in"></i>
           </a>
           <a
+            href="https://wa.me/6672476316?text=Hola%2C%20quiero%20más%20información"
+            target="_blank"
+            class="botonRedes"
+          >
+            <i class="fa-brands fa-whatsapp"></i>
+          </a>
+          <a
+            href="mailto:carlos.andres.loaiza52@gmail.com"
+            target="_blank"
+            class="botonRedes"
+          >
+            <i class="fa-solid fa-envelope"></i>
+          </a>
+          <a
             href="Documents/CV-CarlosAndresLoaiza.pdf"
             download
             class="botonRedes"
@@ -42,7 +56,7 @@
           >
             <i class="fa-solid fa-file"></i>
           </a>
-        </div> -->
+        </div>
       </section>
       <section class="contenedorMenu">
         <a class="contenedorMenuHijo" href="#inicio">Inicio</a>
@@ -120,6 +134,7 @@
           class="imagenPersonal"
           src="img/imagenes/ppuno.jpg"
           alt="FotoPortafolio"
+          id="fotoPersonal"
         />
       </section>
     </section>
@@ -443,6 +458,9 @@
         <p>&copy; 2025 Carlos Andrés Loaiza. Todos los derechos reservados.</p>
       </div>
     </footer>
+    <button id="botonSubir" title="Volver arriba">
+      <i class="fa-solid fa-arrow-up"></i>
+    </button>
     <script src="js/portafolio.js"></script>
   </body>
 </html>
