--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         />
       </section>
     </section>
-    <section>
+    <section style="background-color: #ffffff">
       <img
         class="lineaAmarilla"
         src="img/imagenes/lineamarilla.svg"
@@ -389,7 +389,10 @@
 
     <section class="seccion-contacto" id="contacto">
       <h2>Contáctame</h2>
-      <form class="formulario-contacto" action="#" method="post">
+      <form
+        class="formulario-contacto"
+        id="formulario-contacto"
+      >
         <label for="nombre">Nombre</label>
         <input
           type="text"
@@ -458,9 +461,16 @@
         <p>&copy; 2025 Carlos Andrés Loaiza. Todos los derechos reservados.</p>
       </div>
     </footer>
+
+
+
+
+
+    
     <button id="botonSubir" title="Volver arriba">
       <i class="fa-solid fa-arrow-up"></i>
     </button>
-    <script src="js/portafolio.js"></script>
+    <!-- <script src="https://cdn.emailjs.com/sdk/3.2.0/email.min.js"></script> -->
+    <script type="module" src="js/portafolio.js"></script>
   </body>
 </html>
